--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.gov.sp.fatec</groupId>
+  <groupId>front_end.JavaApplication1.javaapplication1</groupId>
   <artifactId>Projeto_Integrador_2-Sem2020</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -26,7 +26,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>exemplo-jdbc</finalName>
+    <finalName>Projeto_Integrador_2-Sem2020</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -42,7 +42,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.4</version>
         <configuration>
-          <mainClass>br.gov.sp.fatec.App</mainClass>
+          <mainClass>front_end.JavaApplication1.javaapplication1.FXMLFormularioController</mainClass>
         </configuration>
       </plugin>
     </plugins>
