Ajustes Maven e Três telas Funcionando

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>front_end.JavaApplication1.javaapplication1</groupId>
+  <groupId>application</groupId>
   <artifactId>Projeto_Integrador_2-Sem2020</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -18,11 +18,6 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.20</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
-      <version>14</version>
     </dependency>
   </dependencies>
   <build>
@@ -42,7 +37,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.4</version>
         <configuration>
-          <mainClass>front_end.JavaApplication1.javaapplication1.FXMLFormularioController</mainClass>
+          <mainClass>application.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
