--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>Projeto_Integrador_2-Sem2020</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <jar.final.name>Projeto_Integrador_2-Sem2020</jar.final.name>
+    <main.class>application.Main</main.class>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -25,19 +31,44 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>${main.class}</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.4</version>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>install</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <mainClass>application.Main</mainClass>
+          <mainClass>${main.class}</mainClass>
         </configuration>
       </plugin>
     </plugins>
