--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.20</version>
     </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>Projeto_Integrador_2-Sem2020</finalName>
